--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
   padding: 0;
   font-family: "Space Grotesk", sans-serif !important;
 }
-h1{
-    margin-top: 100px;
-    font-size: 50px;
-    text-align: center;
+h1 {
+  margin-top: 100px;
+  font-size: 50px;
+  text-align: center;
 }
 .container {
   padding-top: 100px;
@@ -37,4 +37,45 @@ button {
   cursor: pointer;
   background: #000;
   color: #fff;
+}
+
+@media screen and (max-width: 720px) {
+  h1 {
+    font-size: 30px;
+  }
+  .container {
+    padding-top: 50px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .img {
+    border-radius: 30px;
+    cursor: pointer;
+    width: 200px;
+    transition: all 0.4s;
+    height: 200px;
+    object-fit: cover;
+  }
+}
+@media screen and (max-width: 420px) {
+  h1 {
+    font-size: 30px;
+  }
+  .container {
+    padding-top: 50px;
+    display: flex;;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .img {
+    border-radius: 30px;
+    cursor: pointer;
+    width: 150px;
+    transition: all 0.4s;
+    height: 150px;
+    object-fit: cover;
+  }
 }
